# HellTexter

./: .gitignore  CMakeLists.txt  README.md  build.bat  helltexter.cpp  hook.cpp  uninstall.cpp
